# adventofcode

./: .gitignore  CMakeLists.txt  README.md
2018/day2/: day2.cpp
2019/day1/: day1.py
2019/day10/: day10.py
2019/day11/: day11.py
2019/day2/: day2.py
2019/day3/: day3.py
2019/day4/: day4.py
2019/day5/: day5.py
2019/day6/: day6.py  input
2019/day7/: day7.py  intcode.py
2019/day8/: day8.py
2019/day9/: day9.py
2020/: .clang-format  .clang-tidy  CMakeLists.txt
2020/day1/: solve.cpp
2020/day2/: solve.cpp
2020/day3/: solve.cpp
2020/day4/: solve.cpp
2020/day5/: solve.cpp
2020/day6/: input  solve.cpp
2020/day7/: solve  solve.cpp
day1/: CMakeLists.txt  problem  side_A.cpp
day2/: day2.cpp
day3/: day3.cpp
